# EMRI_mass_luminosity

./: .gitignore  README.md  pyproject.toml
fisher/: Detection.py  FMcalculator.py  SNRcalculator.py
masslum/: cosmology.py  luminosity.py  sampler.py  utils.py
masslum/_pipelines/: FMcalculator.py  SNRcalculator.py  descript.txt  make_catalog.py
masslum/fisher/: Detection.py  FMcalculator.py  HABwave_more.py  SNRcalculator.py
