[build-system]
requires = [
    "oldest-supported-numpy",
    "setuptools>=42",
    "wheel",
    "build",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['masslum', 'masslum.fisher', 'masslum._pipelines']

[project]
name = 'masslum'
description = 'Calibration of the SMBH mass - host galaxy luminosity relation using EMRIs'
version = '0.0.1'
requires-python = '>= 3.9, < 3.13'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ['EMRI', 'LISA', 'TianQin', 'scaling relation', 'inference']
authors = [
  {name = "Stefano Rinaldi", email = "stefano.rinaldi@uni-heidelberg.de"},
  {name = "Alejandro Torres-Orjuela", email = "atorreso@bimsa.cn"},
  ]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Physics',
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "lalsuite",
    "tqdm",
    "eryn",
    "numba"
    ]

[project.urls]
Repository = "https://github.com/sterinaldi/EMRI_mass_luminosity.git"
Issues = "https://github.com/sterinaldi/EMRI_mass_luminosity/issues"

[project.scripts]
EMRI-SNR = "masslum._pipelines.SNRcalculator:main"
EMRI-FM  = "masslum._pipelines.FMcalculator:main"
